--- a/VAO/res/values/strings.xml
+++ b/VAO/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="picture_event">picture_event</string>
     <string name="btnLogin">Login</string>
     <string name="imageEvent">image_event</string>
-    <string name="eventTitle">Event 1</string>
-    <string name="EventDescription">&quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elementum mi nec malesuada ultricies. Quisque quis odio eu felis rhoncus ultricies. Mauris turpis quam, rhoncus vitae risus a, imperdiet suscipit lorem. Nam vitae est sem. Duis erat erat, interdum in eleifend sed, feugiat eu sapien. &quot;</string>
-    <string name="swtEventAttendance">Asistir</string>
+    <string name="eventTitle">This is the first event :D!</string>
+    <string name="eventDescription">&quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elementum mi nec malesuada ultricies. Quisque quis odio eu felis rhoncus ultricies. Mauris turpis quam, rhoncus vitae risus a, imperdiet suscipit lorem. Nam vitae est sem. Duis erat erat, interdum in eleifend sed, feugiat eu sapien. &quot;</string>
+    <string name="swtEventAttendance">Confirmar asistencia</string>
     <string name="imglogo">imgLogo</string>
     <string name="placeHolderUsuario">Usuario</string>
     <string name="placeHolderPassword">Password</string>
@@ -30,4 +30,7 @@
 	<string name="btnConfirmAttendance">Confirmar</string>
 	<string name="txtEventAttendanceText">Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet</string>
 	<string name="btnCancelAttendance">Cancelar</string>
+	<string name="eventMoodLabel">Mood</string>
+	<string name="eventEventDescripcionLabel">Descripcion</string>
+	<string name="eventCommentLabel">Mira lo que estan hablando :O</string>
 </resources>
