--- a/VAO/res/values/strings.xml
+++ b/VAO/res/values/strings.xml
@@ -34,14 +34,17 @@
     <string name="eventMoodLabel">Mood</string>
     <string name="eventEventDescripcionLabel">Descripcion</string>
     <string name="eventCommentLabel">Mira lo que estan hablando :O</string>
-	<string name="title_activity_login_facebook">LoginFacebook</string>
+    <string name="title_activity_login_facebook">LoginFacebook</string>
     <string name="successFBLogin">bien fb del mal!</string>
     <string name="title_activity_event_detail">EventDetail</string>
     <string name="title_activity_event_creation">EventCreation</string>
-    
+
     <string-array name="event_categories">
         <item>Concierto</item>
         <item>Teatro</item>
         <item>Tono</item>
     </string-array>
+
+    <string name="title_activity_event_creation_details">EventCreationDetails</string>
+
 </resources>
