--- a/VAO/res/values/strings.xml
+++ b/VAO/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="title_activity_create_event">CreateEvent</string>
     <string name="validation_fields_complete">Por favor, complete todos los campos</string>
     <string name="validation_correct_dates">Por favor, ingrese fechas válidas para el evento</string>
+    <string name="crear_evento">Crear evento</string>
 </resources>
